<resources>
    <string name="app_name">My Hotel App</string>
    <string name="title_reserve">Reserve</string>
    <string name="title_location">Location</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_dine">Dine and Drink</string>
    <string name="title_search_result">Welcome! Available rooms for %1$d guests staying from %2$s to %3$s</string>
    <string name="title_search_result_nth">Sorry, currently we don\'t have available rooms for %1$d guests staying from %2$s to %3$s</string>
    <string name="title_guest">Guest Information</string>
    <string name="title_stay_info">Stay Information</string>
    <string name="title_charge_info">Summary of Charges</string>
    <string name="title_total">Total</string>
    <string name="title_tax">Tax</string>
    <string name="title_status">Status</string>
    <string name="title_reserve_info">Reservation Record</string>
    <string name="title_reserve_id">Reservation ID</string>
    <string name="title_reserve_details">Reservation Details</string>
    <string name="title_name">Guest %1$d Name</string>
    <string name="title_email">Guest %1$d Email</string>
    <string name="title_phone">Guest %1$d Phone</string>
    <string name="title_language">Language</string>
    <string name="option_en">English</string>
    <string name="option_tc">Traditional Chinese</string>
    <string name="desc_stay_date">%1$s to %2$s (%3$d Night(s))</string>

    <string name="menu_home">Home</string>
    <string name="menu_reserve">Reserve</string>
    <string name="menu_check">Check</string>

    <string name="hint_check_in_date">Check-in Date</string>
    <string name="hint_check_out_date">Check-out Date</string>
    <string name="hint_guest_no">Guests Count</string>
    <string name="hint_reservation_id">Reservation ID</string>

    <string name="button_search">Search</string>
    <string name="button_submit">Submit</string>
    <string name="emptyInput">Error</string>
    <string name="EmptyDateError">Please select Check-in and Check-out Date.</string>

    <string name="name_restaurant1" translatable="false">Ristorante Bella Vista</string>
    <string name="name_restaurant2" translatable="false">Palm Breeze Café</string>
    <string name="name_restaurant1_cuisine">Italian</string>
    <string name="name_restaurant2_cuisine">Tropical Fusion</string>
<!--    <string name="desc_restaurant1_cuisine">Ristorante Bella Vista is an Italian restaurant known for its charming ambiance and delectable cuisine. This culinary gem offers guests a truly authentic Italian dining experience. \nAs you step into Ristorante Bella Vista, you are greeted by warm Mediterranean-inspired décor, with rustic wooden accents and soft lighting that create an inviting atmosphere. \nThe restaurant\'s layout provides both intimate seating for couples and spacious tables for larger groups, making it suitable for various occasions, from romantic dinners to family gatherings. \nThe menu at Ristorante Bella Vista showcases traditional Italian dishes crafted with the finest ingredients and prepared with skill and passion. From classic pasta dishes like Spaghetti Carbonara and Penne Arrabbiata to hearty mains such as Osso Buco and Saltimbocca, each dish is a celebration of Italian culinary heritage. Complementing the exquisite food is a carefully curated wine list featuring a selection of Italian varietals, from crisp whites to full-bodied reds, chosen to enhance the flavors of the cuisine. Whether you're looking for a leisurely lunch, a romantic dinner, or a special celebration, Ristorante Bella Vista promises an unforgettable dining experience that captures the essence of Italy's rich gastronomic tradition. Buon appetito! \nOur opening hours are as follows:\n\nMonday to Friday: 11:30 AM to 10:00 PM\nSaturday: 12:00 PM to 11:00 PM\nSunday: 12:00 PM to 9:00 PM</string>-->
<!--    <string name="desc_restaurant2_cuisine">Palm Breeze Café is renowned for its unique fusion of tropical flavors. This charming café offers guests a distinctive tropical dining experience, right here in the heart of our hotel. \nAs you step into Palm Breeze Café, you\'re greeted with a cheerful atmosphere and relaxed ambiance, as if you\'re on a sunny beach. \nThe café\'s design is sleek and modern, providing a comfortable and laid-back environment, ideal for enjoying great food and unwinding. \nThe menu at Palm Breeze Café features a variety of tropical delights, from fresh and colorful salads to diverse seafood dishes, each bursting with exotic flavors.\nOur opening hours are as follows:\n\nMonday to Friday: 11:00 AM to 9:00 PM\nSaturday: 11:00 AM to 10:00 PM\nSunday: 11:00 AM to 8:00 PM</string>-->
</resources>