<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/title_language"
                android:textColor="@color/colorOnPrimary"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/language_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/english_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_en"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="@dimen/text_size_small" />

                <RadioButton
                    android:id="@+id/traditional_chinese_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_tc"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="@dimen/text_size_small" />
            </RadioGroup>


            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
