<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/heading_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:text="@string/title_reserve"
                android:textColor="@color/colorOnPrimary"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:id="@+id/stay_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:text="@string/title_stay_info"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/stay_date_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:text="2024-04-11-2024-04-16 (5 Nights)"
                android:textColor="@color/colorOnPrimary"
                android:textSize="@dimen/text_size_small"                />

            <TextView
                android:id="@+id/room_type_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:text="Standard Room, Double Bed, City View"
                android:textColor="@color/colorOnPrimary"
                android:textSize="@dimen/text_size_small"
                />

            <TextView
                android:id="@+id/charge_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:text="@string/title_charge_info"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/text_size_small"  />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/charge_room_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:fontFamily="sans-serif"
                    android:gravity="left"
                    android:text="5 Nights"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/charge_room_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:fontFamily="sans-serif"
                    android:gravity="right"
                    android:text="CAD 100"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/charge_tax_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:fontFamily="sans-serif"
                    android:gravity="left"
                    android:text="@string/title_tax"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/charge_tax_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:fontFamily="sans-serif"
                    android:gravity="right"
                    android:text="CAD 100"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/charge_total_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:fontFamily="sans-serif"
                    android:gravity="left"
                    android:text="@string/title_total"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:id="@+id/charge_total_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:fontFamily="sans-serif"
                    android:gravity="right"
                    android:text="CAD 100"
                    android:textColor="@color/colorOnPrimary"
                    android:textSize="@dimen/text_size_medium"  />
            </LinearLayout>

            <TextView
                android:id="@+id/guest_info_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:text="@string/title_guest"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/text_size_small" />


            <LinearLayout
                android:id="@+id/guest_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:orientation="vertical" />

            <Button
                android:id="@+id/submit_button"
                style="@style/Widget.Material3.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/button_submit"
                android:textColor="@color/colorOnPrimary"
                android:textSize="@dimen/text_size_medium" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>