<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:fontFamily="sans-serif"
            android:gravity="left"
            android:text="@string/title_name"
            android:textColor="@color/colorOnPrimary"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:fontFamily="sans-serif"
            android:gravity="right"
            android:text="0"
            android:textColor="@color/colorOnPrimary"
            android:textSize="@dimen/text_size_small"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/email_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:fontFamily="sans-serif"
            android:gravity="left"
            android:text="@string/title_email"
            android:textColor="@color/colorOnPrimary"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/email_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:fontFamily="sans-serif"
            android:gravity="right"
            android:text="0"
            android:textColor="@color/colorOnPrimary"
            android:textSize="@dimen/text_size_small"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phone_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:fontFamily="sans-serif"
            android:gravity="left"
            android:text="@string/title_phone"
            android:textColor="@color/colorOnPrimary"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/phone_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:fontFamily="sans-serif"
            android:gravity="right"
            android:text="0"
            android:textColor="@color/colorOnPrimary"
            android:textSize="@dimen/text_size_small"/>
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small" />
</LinearLayout>